--- a/CinkeTera/.vscode/settings.json
+++ b/CinkeTera/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
 	"java.project.referencedLibraries": [
 		"lib/**/*.jar",
-		"/home/etudiant/lm222582/Téléchargements/iut.jar"
+		"/home/etudiant/lm222582/Téléchargements/iut.jar",
+		"c:\\iut\\TP\\java\\paquetage_class\\iut.jar"
 	]
 }
